# aws-compliance-auditor

./: .gitignore  README.md  dynamodb.py  efs.py  inspector.py  main.py  pyproject.toml  rds.py  redshift.py  utils.py
inspector/: inspector.py
rds/: rds.py
redshift/: redshift.py
tests/: test_aws_compliance_auditor.py
