[tool.poetry]
name = "aws-compliance-auditor"
version = "0.1.0"
description = ""
authors = ["Luke Daigle <ddaigle@bellese.io>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.22.11"
click = "^8.1.3"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
